--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -1,10 +1,10 @@
 html,
-body,
-#app {
+body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   overflow-x: auto;
   font-size: 14px;
+  color: var(--font-color);
 }
 
 .fadeIn {
