--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -2,9 +2,11 @@
   background-color: var(--bg-color);
   --bg-color: #000;
   --font-color: #fff;
+  --circle-color: #fff;
 }
 .light {
   background-color: var(--bg-color);
   --bg-color: #fff;
   --font-color: #000;
+  --circle-color: rgb(172, 222, 233);
 }
