--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -3,10 +3,44 @@
   --bg-color: #000;
   --font-color: #fff;
   --circle-color: #fff;
+  --state-info-backgroudColor-primary: #00131d;
+  --state-info-borderColor-primary: #002235;
+  --state-info-color-primary: #64c7ff;
+  --state-info-backgroundColor-secondary: #002235;
+  --state-success-backgroundColor-primary: #00190f;
+  --state-success-borderColor-primary: #002817;
+  --state-success-color-primary: #3ceea5;
+  --state-success-backgroundColor-secondary: #002817;
+
+  --state-warning-backgroundColor-primary: #1b1500;
+  --state-warning-borderColor-primary: #292100;
+  --state-warning-color-primary: #ffdc4e;
+  --state-warning-backgroundColor-secondary: #292100;
+  --state-danger-backgroundColor-primary: #1c0301;
+  --state-danger-borderColor-primary: #340a01;
+  --state-danger-color-primary: #ffa692;
+  --state-danger-backgroundColor-secondary: #340a01;
 }
 .light {
   background-color: var(--bg-color);
   --bg-color: #fff;
   --font-color: #000;
   --circle-color: rgb(172, 222, 233);
+  --state-info-backgroudColor-primary: #f2faff;
+  --state-info-borderColor-primary: #dff3ff;
+  --state-info-color-primary: #1aadff;
+  --state-info-backgroundColor-secondary: #dff3ff;
+  --state-success-backgroundColor-primary: #ecfff7;
+  --state-success-borderColor-primary: #defff1;
+  --state-success-color-primary: #0dd885;
+  --state-success-backgroundColor-secondary: #defff1;
+
+  --state-warning-backgroundColor-primary: #fffcee;
+  --state-warning-borderColor-primary: #fff6d3;
+  --state-warning-color-primary: #cba408;
+  --state-warning-backgroundColor-secondary: #fff6d3;
+  --state-danger-backgroundColor-primary: #fff9f8;
+  --state-danger-borderColor-primary: #fff3f0;
+  --state-danger-color-primary: #ff3b10;
+  --state-danger-backgroundColor-secondary: #fff3f0;
 }
