--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -3,6 +3,7 @@
   --bg-color: #000;
   --font-color: #fff;
   --circle-color: #fff;
+  // mdc alert
   --state-info-backgroudColor-primary: #00131d;
   --state-info-borderColor-primary: #002235;
   --state-info-color-primary: #64c7ff;
@@ -11,7 +12,6 @@
   --state-success-borderColor-primary: #002817;
   --state-success-color-primary: #3ceea5;
   --state-success-backgroundColor-secondary: #002817;
-
   --state-warning-backgroundColor-primary: #1b1500;
   --state-warning-borderColor-primary: #292100;
   --state-warning-color-primary: #ffdc4e;
@@ -26,6 +26,7 @@
   --bg-color: #fff;
   --font-color: #000;
   --circle-color: rgb(172, 222, 233);
+  // mdc alert
   --state-info-backgroudColor-primary: #f2faff;
   --state-info-borderColor-primary: #dff3ff;
   --state-info-color-primary: #1aadff;
@@ -34,7 +35,6 @@
   --state-success-borderColor-primary: #defff1;
   --state-success-color-primary: #0dd885;
   --state-success-backgroundColor-secondary: #defff1;
-
   --state-warning-backgroundColor-primary: #fffcee;
   --state-warning-borderColor-primary: #fff6d3;
   --state-warning-color-primary: #cba408;
