--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -4,33 +4,7 @@ body {
   min-height: 100vh;
   overflow-x: auto;
   // font-size: 14px;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   color: var(--font-color);
-}
-// markdown
-strong {
-  font-weight: 600;
-}
-code {
-  border-radius: 0.25rem;
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    Liberation Mono, Courier New, monospace;
-  font-size: 14px;
-  font-weight: 400;
-  margin-left: 1px;
-  margin-right: 1px;
-  padding: 0.2rem 0.375rem 0.2rem 0.375rem;
-}
-.prose a {
-  border-bottom: 1px dashed currentColor;
-}
-// 重置unocss typography 部分样式
-.prose :where(:not(pre) > code):not(:where(.not-prose, .not-prose *))::before,
-.prose :where(:not(pre) > code):not(:where(.not-prose, .not-prose *))::after {
-  content: none !important;
-}
-.prose :where(a):not(:where(.not-prose, .not-prose *)) {
-  text-decoration: none !important;
 }
