--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -20,6 +20,13 @@
   --state-danger-borderColor-primary: #340a01;
   --state-danger-color-primary: #ffa692;
   --state-danger-backgroundColor-secondary: #340a01;
+  // custom markdom style
+  --md-content-color: #bbbbbb;
+  --md-blockquote-color: #9db3c2;
+  --md-blockquote-bg-color: #11191f;
+  --md-text-color: #0891b2;
+  --md-code-bg-color: #ebf5ffe0;
+  --md-pre-bg-color: #27272a;
 }
 .light {
   background-color: var(--bg-color);
@@ -43,4 +50,11 @@
   --state-danger-borderColor-primary: #fff3f0;
   --state-danger-color-primary: #ff3b10;
   --state-danger-backgroundColor-secondary: #fff3f0;
+  // custom markdom style
+  --md-content-color: #595959;
+  --md-blockquote-color: #5f6dac;
+  --md-blockquote-bg-color: #eff2f6;
+  --md-text-color: #0891b2;
+  --md-code-bg-color: #ebf4ff;
+  --md-pre-bg-color: #272822;
 }
