--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -8,3 +8,18 @@ body {
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
   color: var(--font-color);
 }
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar:horizontal {
+  height: 6px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+  background: var(--scroll-bg-color);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--scroll-color);
+  border-radius: 10px;
+}
