--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -3,6 +3,8 @@
   --bg-color: #000;
   --font-color: #fff;
   --circle-color: #fff;
+  --scroll-color: #111;
+  --scroll-bg-color: #050505;
   // mdc alert
   --state-info-backgroudColor-primary: #00131d;
   --state-info-borderColor-primary: #002235;
@@ -33,6 +35,8 @@
   --bg-color: #fff;
   --font-color: #000;
   --circle-color: rgb(172, 222, 233);
+  --scroll-color: #eee;
+  --scroll-bg-color: #fff;
   // mdc alert
   --state-info-backgroudColor-primary: #f2faff;
   --state-info-borderColor-primary: #dff3ff;
