--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -5,6 +5,7 @@
   --circle-color: #fff;
   --scroll-color: #111;
   --scroll-bg-color: #050505;
+  --border-color: rgba(255, 255, 255, 0.09);
   // mdc alert
   --state-info-backgroudColor-primary: #00131d;
   --state-info-borderColor-primary: #002235;
@@ -37,6 +38,7 @@
   --circle-color: rgb(172, 222, 233);
   --scroll-color: #eee;
   --scroll-bg-color: #fff;
+  --border-color: rgba(239, 239, 245);
   // mdc alert
   --state-info-backgroudColor-primary: #f2faff;
   --state-info-borderColor-primary: #dff3ff;
