--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -1,12 +1,16 @@
 html,
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   overflow-x: auto;
   // font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
   color: var(--font-color);
+}
+#__nuxt {
+  height: 100%;
+  width: 100%;
 }
 ::-webkit-scrollbar {
   width: 6px;
