--- a/assets/css/themes.less
+++ b/assets/css/themes.less
@@ -30,6 +30,7 @@
   --md-text-color: #0891b2;
   --md-code-bg-color: #ebf5ffe0;
   --md-pre-bg-color: #0f172b;
+  --un-prose-borders: #314158;
 }
 .light {
   background-color: var(--bg-color);
@@ -63,4 +64,5 @@
   --md-text-color: #0891b2;
   --md-code-bg-color: #ebf4ff;
   --md-pre-bg-color: #eff2f6;
+  --un-prose-borders: #e2e8f0;
 }
